13 July 2009: Wouter
	- Fix for crash at start on windows.
	- tag for release 1.3.2.
	- trunk has version 1.3.3.

9 July 2009: Wouter
	- tag for release 1.3.1.
	- trunk has version 1.3.2.

7 July 2009: Wouter
	- iana portlist updated.

6 July 2009: Wouter
	- prettier error handling in SSL setup.
	- makedist.sh uname fix (same as ldns).
	- updated fedora spec file.

3 July 2009: Wouter
	- fixup linking when ldnsdir is "".

30 June 2009: Wouter
	- more lenient truncation checks.

29 June 2009: Wouter
	- ldns trunk r2959 imported as tarball, because of solaris cc compile
	  support for c99.  r2960 for better configure.
	- better wrongly_truncated check.
	- On Linux, fragment IPv6 datagrams to the IPv6 minimum MTU, to
	  avoid dropped packets at routers.

26 June 2009: Wouter
	- Fix EDNS fallback when EDNS works for short answers but long answers
	  are dropped.

22 June 2009: Wouter
	- fixup iter priv strict aliasing while preserving size of sockaddr.
	- iana portlist updated.  (one less port allocated, one more fraction
	  of a bit for security!)
	- updated fedora specfile in contrib from Paul Wouters.
	
19 June 2009: Wouter
	- Fixup strict aliasing warning in iter priv code.
	  and config_file code.
	- iana portlist updated.
	- harden-referral-path: handle cases where NS is in answer section.

18 June 2009: Wouter
	- Fix of message parse bug where (specifically) an NSEC and RRSIG
	  in the wrong order would be parsed, but put wrongly into internal
	  structures so that later validation would fail.
	- Extreme lenience for wrongly truncated replies where a positive
	  reply has an NS in the authority but no signatures.  They are
	  turned into minimal responses with only the (secure) answer.
	- autoconf 2.63 for configure.
	- python warnings suppress.  Keep python API away from header files.

17 June 2009: Wouter
	- CREDITS entry for cz.nic, sponsoring a 'summer of code' that was
	  used for the python code in unbound. (http://www.nic.cz/vip/ in cz).
